--- a/hng-app/src/App.css
+++ b/hng-app/src/App.css
@@ -173,6 +173,30 @@ align-items: center;
 text-align: center;
 
 }
+a#contacts{
+  text-align: center;
+  /* width: 150%; */
+  height: 70px;
+  width: 33%;
+  /* height: 706px; */ 
+  background-color: #EAECF0;
+  color: black;
+  text-decoration-line: none;
+  padding-left: 27%; 
+ 
+ /* padding-right: 30%;  */
+ margin-top: 28px;
+ margin-left: 20%;
+ margin-right: 20%;
+ font-family: 'Inter';
+font-style: normal;
+font-weight: 500;
+font-size: 18px;
+line-height: 28px;
+display: flex;
+align-items: center;
+text-align: center;
+}
 a#book__python:hover {
   background-color: #D0D5DD;
 }
@@ -245,8 +269,158 @@ a:hover {
 
 h2#slack{
   display: none;
+  
 }
+#me{
+  padding-left: 20%;
+  text-align: left;
+}
+#first1{
+  background: #FFFFFF;
+border: 1px solid #D0D5DD;
+box-shadow: 0px 1px 2px rgba(16, 24, 40, 0.05);
+  text-align: left;
+  margin-top: 2%; 
+  margin-left: -24%;
+  width: 370px;
+height: 24px;
 
+/* Text md/Normal */
+
+font-family: 'Inter';
+font-style: normal;
+font-weight: 400;
+font-size: 16px;
+line-height: 24px;
+}
+#first_name{
+  /* padding-left: 20%; */
+  text-align: left;
+  font-family: 'Inter';
+font-style: normal;
+  margin-top: -10%;
+  margin-left: -24%;
+  /* padding-top: 30%; */
+  
+}
+#email{
+  text-align: left;
+    font-family: 'Inter';
+  font-style: normal;
+  padding-top: 5%;
+  margin-left: -24%;
+ 
+}
+#message{
+  text-align: left;
+  font-family: 'Inter';
+font-style: normal;
+padding-top: 5%;
+margin-left: -24%;
+}
+#message1{
+font-family: 'Inter';
+font-style: normal;
+font-weight: 400;
+font-size: 16px;
+text-align: left;
+line-height: 24px;
+margin-left: -24%;
+margin-top: 2%; 
+box-sizing: border-box;
+display: flex;
+flex-direction: row;
+align-items: flex-start;
+padding: 12px 14px;
+gap: 8px;
+width: 870px;
+height: 132px;
+background: #FFFFFF;
+border: 1px solid #D0D5DD;
+box-shadow: 0px 1px 2px rgba(16, 24, 40, 0.05);
+}
+#email1{
+  text-align: left;
+  margin-top: 2%; 
+  margin-left: -24%;
+  width: 860px;
+height: 24px;
+background: #FFFFFF;
+border: 1px solid #D0D5DD;
+box-shadow: 0px 1px 2px rgba(16, 24, 40, 0.05);
+
+}
+#last_name{
+    /* padding-left: 20%; */
+    text-align: left;
+    font-family: 'Inter';
+  font-style: normal;
+    margin-top: -10%;
+    margin-left: 60%;
+    /* padding-top: 30%; */
+    
+}
+#last2{
+  text-align: left;
+  background: #FFFFFF;
+border: 1px solid #D0D5DD;
+box-shadow: 0px 1px 2px rgba(16, 24, 40, 0.05);
+  margin-top: 1%; 
+  margin-left: 60%;
+  width: 370px;
+height: 24px;
+
+/* Text md/Normal */
+
+font-family: 'Inter';
+font-style: normal;
+font-weight: 400;
+font-size: 16px;
+line-height: 24px;
+}
+#check1{
+  margin-left: -24%;
+  margin-top: 5%;
+}
+#check{
+  margin-left: -36%;
+  margin-top: -3.5%;
+}
+#btn__submit{
+  margin-left: -24%;
+  margin-top: 5%;
+
+box-sizing: border-box;
+display: flex;
+flex-direction: row;
+justify-content: center;
+align-items: center;
+/* padding: 12px 20px; */
+gap: 8px;
+width: 869px;
+height: 48px;
+background: #1570EF;
+border: 1px solid #1570EF;
+box-shadow: 0px 1px 2px rgba(16, 24, 40, 0.05);
+border-radius: 8px;
+flex: none;
+order: 1;
+align-self: stretch;
+flex-grow: 0;
+}
+form{
+display: flex;
+flex-direction: column;
+background-color: white;
+/* border: 1px solid #dadce0; */
+border-radius: 8px;
+width: 40%;
+height: 150%;
+padding: 24px 24px 36px;
+margin-left: auto;
+margin-right: auto;
+margin-top: 100px;
+}
 /* 
 .App-logo {
   height: 40vmin;
