--- a/hng-app/src/App.css
+++ b/hng-app/src/App.css
@@ -383,19 +383,20 @@ box-shadow: 0px 1px 2px rgba(16, 24, 40, 0.05);
     text-align: left;
     font-family: 'Inter';
   font-style: normal;
-    margin-top: -10%;
-    margin-left: 60%;
+    margin-top: -8%;
+    margin-left: 40%;
     /* padding-top: 30%; */
     
 }
 #last2{
   text-align: left;
   background: #FFFFFF;
+  /* background: red; */
 border: 1px solid #D0D5DD;
 box-shadow: 0px 1px 2px rgba(16, 24, 40, 0.05);
-  margin-top: 1%; 
-  margin-left: 60%;
-  width: 370px;
+  margin-top: 1.5%; 
+  margin-left: 40%;
+  width: 390px;
 height: 24px;
 
 /* Text md/Normal */
@@ -411,8 +412,8 @@ line-height: 24px;
   margin-top: 5%;
 }
 #check{
-  margin-left: -36%;
-  margin-top: -3.5%;
+  margin-left: -20%;
+  margin-top: -2.5%;
 }
 #btn__submit{
   margin-left: -24%;
